--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <h1>SRiSHTi  2k21</h1>
     <h2>IEEE STUDENTS CHAPTER 12951</h2>
-    <a href="#cards" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
+    <a href="#header2" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
   </section>
 
   <div  id="header2" class="d-flex align-items-center header2 ">
