--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
+        
         <li><a href="#" class="nav-link scrollto active"><i class="fas fa-home"></i> <span>Home</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fas fa-calendar-day"></i> <span>Events</span></a></li>
         <li><a href="workshop.php" class="nav-link scrollto"><i class="fas fa-chalkboard-teacher"></i> <span>Workshop</span></a></li>
-        <li><a href="about.html" class="nav-link scrollto"><i class="fas fa-info-circle"></i> <span>About</span></a></li>
+        <li><a href="about.php" class="nav-link scrollto"><i class="fas fa-info-circle"></i> <span>About</span></a></li>
         <li><a href="team.html" class="nav-link scrollto"><i class="fas fa-users"></i> <span>Team</span></a></li>
         <li><a href="contact.php" class="nav-link scrollto"><i class="fas fa-paper-plane"></i> <span>Contact</span></a></li>
       </ul>
